--- a/register.html
+++ b/register.html
@@ -73,8 +73,9 @@
                                         <label for="course" class="form-label">Select Your Path</label>
                                         <select class="form-select" id="course" name="course" required>
                                             <option value="" hidden>Choose your course</option>
-                                            <option value="webdev">Web Development Bootcamp</option>
-                                            <option value="datascience">Data Science & Analytics</option>
+                                            <option value="webdev">MERN Stack Development</option>
+                                            <option value="datascience">Python Full Stack</option>
+                                            <option value="mobile">JAVA Springboot</option>
                                             <option value="mobile">Mobile App Development</option>
                                             <option value="cloud">Cloud Computing</option>
                                             <option value="ai">AI & Machine Learning</option>
