--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
                     <h5 class="text-muted">
                         Unlock Your Potential with Industry-Relevant Skills and Hands-on Learning Experience. Join thousands of successful professionals who have accelerated their careers through our comprehensive training programs.
                     </h5>
+                    <div class="row mt-4 mb-4">
+                        <div class="col-4">
+                            <div class="stat-box text-center">
+                                <h3 class="text-primary">5000+</h3>
+                                <p class="small">Graduates</p>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="stat-box text-center">
+                                <h3 class="text-success">95%</h3>
+                                <p class="small">Placement Rate</p>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="stat-box text-center">
+                                <h3 class="text-warning">50+</h3>
+                                <p class="small">Industry Partners</p>
+                            </div>
+                        </div>
+                    </div>
                     <div class="d-flex justify-content-lg-start justify-content-center mt-4 gap-3">
                         <a href="./register.html" class="btn btn-custom-primary">
                             Start Learning Today<span class="text-grey"> (Register-Page)</span> <i class="fas fa-arrow-right ms-2"></i>
@@ -61,11 +81,34 @@
                             Discover More <i class="fas fa-info-circle ms-2"></i>
                         </a>
                     </div>
+                    <div class="trust-badges mt-4">
+                        <p class="text-muted mb-2">Trusted By Leading Companies</p>
+                        <div class="d-flex justify-content-lg-start justify-content-center gap-4">
+                            <i class="fab fa-google fa-2x text-muted"></i>
+                            <i class="fab fa-microsoft fa-2x text-muted"></i>
+                            <i class="fab fa-amazon fa-2x text-muted"></i>
+                            <i class="fab fa-ibm fa-2x text-muted"></i>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-12 text-center gy-4">
                     <img src="https://img.freepik.com/free-photo/young-students-learning-together-library_23-2149215402.jpg"
                         alt="Professional Training" 
+                        class="main-image"
                         style="border-radius: 15px; box-shadow: 0 10px 20px rgba(0,0,0,0.1);">
+                    <div class="testimonial-card mt-4 p-3 bg-light rounded shadow-sm">
+                        <div class="d-flex align-items-center mb-2">
+                            <img src="https://i.imgflip.com/95gtwt.png" 
+                                alt="Student" 
+                                class="rounded-circle"
+                                style="width: 50px; height: 50px;">
+                            <div class="ms-3">
+                                <h6 class="mb-0">Suresh Krishna</h6>
+                                <small class="text-muted">Software Engineer @ Google</small>
+                            </div>
+                        </div>
+                        <p class="small mb-0">"This program transformed my career. I went from beginner to professional in just 6 months!"</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -100,6 +143,36 @@
                             <i class="fas fa-certificate fa-3x text-warning mb-3"></i>
                             <h4>Placement Support</h4>
                             <p>Get comprehensive placement assistance, interview preparation, and access to our network of hiring partners.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- New Card: Flexible Learning -->
+                <div class="col-md-4">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center">
+                            <i class="fas fa-clock fa-3x text-info mb-3"></i>
+                            <h4>Flexible Learning</h4>
+                            <p>Choose between online, hybrid, or in-person classes with flexible schedules designed to fit your lifestyle and learning preferences.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- New Card: Project-Based Learning -->
+                <div class="col-md-4">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center">
+                            <i class="fas fa-project-diagram fa-3x text-danger mb-3"></i>
+                            <h4>Project-Based Learning</h4>
+                            <p>Build a robust portfolio through hands-on projects, hackathons, and real-world case studies that demonstrate your practical skills.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- New Card: Career Support -->
+                <div class="col-md-4">
+                    <div class="card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center">
+                            <i class="fas fa-handshake fa-3x text-purple mb-3"></i>
+                            <h4>Lifetime Access</h4>
+                            <p>Get unlimited access to course materials, updates, and our alumni network. Stay current with evolving industry trends.</p>
                         </div>
                     </div>
                 </div>
@@ -216,21 +289,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
             </div>
         </div>
