--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 <small class="text-muted">Software Engineer @ Google</small>
                             </div>
                         </div>
-                        <p class="small mb-0">"This program transformed my career. I went from beginner to professional in just 6 months!"</p>
+                        <p class="small mb-0">"This program transformed my career. I went from beginner to Professional⭐ in just 6 months!"</p>
                     </div>
                 </div>
             </div>
